<resources>
    <string name="app_name">Exams</string>
    <string name="welcomeText">Welcome to Exams!</string>

    <string name="unknown_error">An unknown error occurred!</string>
    <string name="network_error">Unable to execute your query. An unknown network error occurred</string>

    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="login_button_text">Sign In</string>
    <string name="create_account">Do not have account?</string>
    <string name="register_button">Create</string>
    <string name="id_number">Student ID</string>
    <string name="reg_button_text">Sign Up</string>
    <string name="create_text">Account successfully created</string>
    <string name="user_exists_text">Such login has already created</string>
    <string name="warning_title_text">Warning!</string>
    <string name="warning_message_text">An unknown response has been received from server! Please, report to the administrator</string>
    <string name="accept_text">OK</string>
    <string name="connection_error_text">Unable to establish connection with server. Check you internet connection</string>
    <string name="server_sleeping_text">The Server is temporarily unavailable. Please, try to reconnect again later</string>
    <string name="not_such_user">User with such Student ID number is not allowed to register</string>
    <string name="start_button_student_text">Sign In as Student</string>
    <string name="start_button_teacher_text">Sign In as Teacher</string>
    <string name="student_ID_exists_text">User with such Student ID number has already created</string>
    <string name="sid_length">Student ID number is invalid</string>
    <string name="login_beginning_invalid">Login starts with invalid symbol</string>
    <string name="unavailable_login">Input login is forbidden</string>
    <string name="password_short">Input password is too short</string>
    <string name="password_unsafe_message">Input password is very widespread. It may decrease the safety level of your account.
        We strongly recommend you to use at least one digit, one special symbol and one capital letter in your password.
        Would you like to change the password?</string>
    <string name="login_short">Input login is too short</string>
    <string name="login_long">Input login is too long. Please, reduce it to 32 symbols</string>
    <string name="password_long">Input password is too long. Please, reduce it to 64 symbols</string>
    <string name="signout_text">Sign Out</string>
    <string name="result_card_text">View results</string>
    <string name="pass_exams_text">Take exams</string>
    <string name="todo">TODO</string>
    <string name="exit_text">Exit</string>
    <string name="exit_message">Do you want to log out from your account?</string>
    <string name="exit_message_snackbar">Have a nice day!</string>
    <string name="loading_text">Preparing things…</string>
    <string name="decline_text">Continue</string>
    <string name="change_text">Change</string>
    <string name="user_not_found">Unfortunately, such user has not been registered in our system. Press \"OK\" button to retry Sign In procedure</string>
    <string name="incorrect_identity_data">Login or password has been input incorrectly</string>
    <string name="hotspot_error">No internet connection. Please, check your hotspot</string>
    <string name="important_title">Important</string>
    <string name="email_message">It is recommended to an your email. Doing this allowed you to send messages to
    other accountholders or you can restore your password if you forget it</string>
    <string name="continue_text">Continue</string>
    <string name="exams_available">Exams available</string>
    <string name="exams_passed">Exams passed</string>
    <string name="email_correct_message">It seems your email is incorrect. If you have made a mistake you can correct it</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="email_added">Your email has been successfully added</string>
    <string name="no_groups_found">There are no groups which you can manage</string>
    <string name="student_added">Student successfully added</string>
    <string name="student_exists_text">Student with input Student ID has already existed</string>
    <string name="unknown_response">An unknown response has been received from server</string>
    <string name="student_id_number">Student ID Number</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="patronymic">Patronymic</string>
    <string name="add">Add</string>
    <string name="available_groups">Available groups:</string>
    <string name="exams">Exams</string>
    <string name="students">Students</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="no_group_number_selected">The group number in not selected</string>
    <string name="available_exams">Available exams:</string>
    <string name="no_exams_found">There are no exams available</string>
    <string name="question_added">Question added</string>
    <string name="question_exists">This question has already been added</string>
    <string name="fieldsMissed">Some of fields has been missed or has been filled incorrectly,
        please, ensure you filled the gaps in the right way and try again</string>
    <string name="no_students_found">There are no students added in this group yet</string>
    <string name="no_questions_found">There are no questions added in this exam</string>
    <string name="questions">Questions</string>
    <string name="update">Update question</string>
    <string name="question_updated">The question has been successfully updated</string>
    <string name="delete">Delete question</string>
    <string name="question_deleted">The question has been successfully deleted</string>
    <string name="deleteMessage">Are you sure you want ot delete this question? This action cannot be canceled</string>
    <string name="not_detected">NOT DETECTED</string>
    <string name="minimalQuestionMessage">This is the first question. You can finish the test now, however, you results will not
    be saved. Are you sure you want ot finish the attempt?</string>
    <string name="maximalQuestionMessage">This is the last question. If you continue you results will be saved. Are you sure that you want to finish the attempt?</string>
    <string name="return_to_attempt">Return to attempt</string>
    <string name="emailError">Error adding an email</string>
    <string name="email_not_added">Adding email rejected</string>
    <string name="SIDText">Student ID number</string>
    <string name="results_saved">You results have been saved</string>
    <string name="available_results">Available results</string>
    <string name="no_results_found">There are no results available for you</string>
    <string name="no_results_found_teacher">There are no results available for your groups</string>
    <string name="exit_test_message">You results have not been saved. If you quit from the test now
        your attempt will not be successful and you will have to redo this test to pass the exam. Exit now?</string>
    <string name="no_groups_to_manage">You have no groups to manage</string>
    <string name="no_exams_to_manage">You have no exams to manage</string>
    <string name="result">Your result:</string>
    <string name="result_teacher">Result:</string>
    <string name="student">Student:</string>
    <string name="report">Send report</string>
    <string name="report_message">Enter you message:</string>
    <string name="send_button_text">Send</string>
    <string name="teachers">Teachers</string>
    <string name="groups">Groups</string>
    <string name="no_teachers_found">There are no teachers added</string>
    <string name="delete_student">Delete student</string>
    <string name="delete_teacher">Delete teahcer</string>
    <string name="update_teachers">Update teachers</string>
    <string name="exit_message_advanced">Do you want to exit? All unsaved data will be deleted</string>
    <string name="exit">Exit</string>
    <string name="teacher_updated">The teacher successfully updated</string>
    <string name="teacher_deleted">The teacher successfully deleted</string>
    <string name="question_exists_new">This question has already been added, please, change the title</string>
    <string name="report_sent">Your report has been sent</string>
    <string name="report_error">Report sending failed</string>
    <string name="group_added">Group successfully added</string>
    <string name="report_denied">Report sending denied</string>
</resources>