<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#9e690d">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/bottomMargin">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/login"
            android:src="@drawable/logo_drawable"
            android:contentDescription="@string/todo"/>

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/passwordContainrt_LA"
            android:hint="@string/login_text"
            android:textColor="@android:color/black"
            android:inputType="text"
            android:gravity="start"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordContainrt_LA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_marginBottom="@dimen/bottomMargin"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_text"
                android:textColor="@android:color/black"
                android:gravity="start"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/bottomMargin"
            android:layout_below="@id/passwordContainrt_LA"
            android:text="@string/login_button_text"
            android:textSize="@dimen/textSize"
            android:textStyle="italic"
            android:background="@drawable/button_shape_standard"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/minMargin"
                android:text="@string/create_account"
                android:textSize="@dimen/textSize"
                android:textStyle="italic"/>

            <Button
                android:id="@+id/createButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                android:background="@color/colorOpaque"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>

</RelativeLayout>