<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_margin="@dimen/image_margin"
        android:src="@color/colorMain"
        android:contentDescription="@string/todo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/photo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/image_margin"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/full_name"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/topMargin"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/email"/>

    </LinearLayout>

</RelativeLayout>