<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentsActivity"
    android:orientation="vertical"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/noQuestions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/noQuestionsText"
            android:layout_centerHorizontal="true"
            android:src="@android:drawable/ic_notification_clear_all"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@id/noQuestionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/no_questions_found"
            android:textSize="@dimen/textSize"
            android:textStyle="italic"/>

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/minMargin"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title_layout"
        app:cardCornerRadius="@dimen/corner_radius">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/questions"
            android:textSize="@dimen/textSize"/>

    </android.support.v7.widget.CardView>

    <ListView
        android:id="@+id/exams_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/topMargin"
        android:layout_below="@id/heading"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>