<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/bottomMargin"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/info_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_drawable_advanced"
            android:contentDescription="@string/todo"/>

    <EditText
        android:id="@+id/studentIDNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/minMargin"
        android:layout_below="@id/image"
        android:hint="@string/student_id_number"
        android:lines="2"
        android:background="@drawable/custom_edit_text_background"/>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/minMargin"
        android:layout_below="@id/studentIDNumber"
        android:lines="2"
        android:background="@drawable/custom_edit_text_background"/>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/minMargin"
        android:layout_below="@id/lastName"
        android:lines="2"
        android:background="@drawable/custom_edit_text_background"/>

    <EditText
        android:id="@+id/patronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/minMargin"
        android:layout_below="@id/firstName"
        android:lines="2"
        android:background="@drawable/custom_edit_text_background"/>

    <Spinner
        android:id="@+id/groupSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/patronymic"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/add"/>

    </RelativeLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>