<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ExamsActivity"
    android:background="@color/secondBackgroundColor">

    <android.support.v7.widget.CardView
        android:id="@+id/heading_activity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/minMargin"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title_layout"
        app:cardCornerRadius="@dimen/corner_radius"
        app:cardBackgroundColor="@color/colorMainNewDark">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/available_results"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/noResults"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/noResultsText"
            android:layout_centerHorizontal="true"
            android:src="@drawable/no_drawable"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@id/noResultsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/no_results_found"
            android:textSize="@dimen/textSize"
            android:textStyle="italic"/>

    </RelativeLayout>

    <ListView
        android:id="@+id/resultsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/list_view_margin"
        android:layout_below="@id/heading_activity"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>